Add more styles.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
         <h1 class="title">Komornik na karku?</h1>
         <p>
             Pomagamy osobom zadłużonym, przeciwko którym 
-            <span>komornik wszczyna postępowanie egzekucyjne, zajmując nieruchmość.</span>
+            <span class="text-colored"> komornik</span>
+            <span class="text-colored"> wszczyna</span>
+            <span class="text-colored"> postępowanie</span>
+            <span class="text-colored"> egzekucyjne,</span>
+            <span class="text-colored"> zajmując</span>
+            <span class="text-colored"> nieruchmość.</span>
             Każda sprawa jest rozpatrywana indywidualnie, dlatego w zależności od Twojej sytuacji doradzimy najlepsze rozwiązania, zwiększając Twoje szanse na uniknięcie postępowania egzekucyjnego.
         </p>
     </main>
